<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvAccountDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting" />

    <Button
        android:id="@+id/btnReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder" />

</LinearLayout>
