<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/accountname" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rdgDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbtnmmddyy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmddyy" />

        <RadioButton
            android:id="@+id/rbtddmmyy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ddmmyy" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conti" />

</LinearLayout>