<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TableRow
        android:id="@+id/headerRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:text="@string/add"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        android:id="@+id/dateRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbldate" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/showdate" />

        <ImageButton
            android:id="@+id/ibChangeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calender"
            android:contentDescription="@string/changedate" />
    </TableRow>

    <TableRow
        android:id="@+id/amountRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:id="@+id/paymentRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentmode" />

        <Spinner
            android:id="@+id/spinnerPaymentMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:id="@+id/descriptionRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_span="2"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />
    </TableRow>

    <TableRow
        android:id="@+id/ButtonRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSaveAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:text="@string/add" />
    </TableRow>

</TableLayout>