<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical"
    android:padding="5dp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/blank" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountname" />
    </TableRow>

    <ScrollView
        android:id="@+id/Row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:padding="5dp" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ExpandableListView
                android:id="@+id/expCategory"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:layout_span="2" >
            </ExpandableListView>
        </TableRow>
    </ScrollView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/holo_blue_light"
        android:padding="5dp" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

            <TextView
                android:id="@+id/tvSpace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />

            <TextView
                android:id="@+id/tvTodaysExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="75dp"
                android:text="@string/todaysexpense" />

            <TextView
                android:id="@+id/tvTodaysTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
             >

            <TextView
                android:id="@+id/tvspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income" />

            <TextView
                android:id="@+id/tvTotalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense" />

            <TextView
                android:id="@+id/tvTotalExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvCashOnHand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cashonhand" />

            <TextView
                android:id="@+id/tvTotalCashOnHand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>
    </TableLayout>

</LinearLayout>